--- a/UnityTest/Unity/Exports.xcconfig
+++ b/UnityTest/Unity/Exports.xcconfig
@@ -1,2 +1,2 @@
 UNITY_RUNTIME_VERSION = 2018.2.17f1;
-UNITY_IOS_EXPORT_PATH = /Users/niels/Downloads/unity-embed-ios-native-swift-master/UnityExport;
+UNITY_IOS_EXPORT_PATH = "/Users/⁨ivanrep/⁨Projects/⁨Unity/⁨RocketFishBuild⁩";
