--- a/UnityTest/Info.plist
+++ b/UnityTest/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>Fabric</key>
+    <dict>
+        <key>APIKey</key>
+        <string>002d1e80e7bf3a300de583f69a92347342fc38a9</string>
+        <key>Kits</key>
+        <array>
+            <dict>
+                <key>KitName</key>
+                <string>Crashlytics</string>
+                <key>KitInfo</key>
+                <dict/>
+            </dict>
+        </array>
+    </dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
